--- a/02_base_resources/helm-values/authentik.yaml
+++ b/02_base_resources/helm-values/authentik.yaml
@@ -54,6 +54,4 @@ geoip:
     secretName: ${geo_ip_secret}
 
 redis:
-  enabled: true
-  global:
-    storageClass: "nfs-csi-authentik"
+  enabled: false
